<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_16">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/dimen_16"
            android:text="@string/app_title"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/abc_text_size_large_material" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_spotify"
                style="@style/AppTheme.Button"
                android:onClick="onClick"
                android:text="@string/txt_spotify_streamer" />

            <Button
                android:id="@+id/btn_scores"
                style="@style/AppTheme.Button"
                android:onClick="onClick"
                android:text="@string/txt_scores_app" />

            <Button
                android:id="@+id/btn_library"
                style="@style/AppTheme.Button"
                android:onClick="onClick"
                android:text="@string/txt_library_app" />

            <Button
                android:id="@+id/btn_bigger"
                style="@style/AppTheme.Button"
                android:onClick="onClick"
                android:text="@string/txt_build_bigger" />

            <Button
                android:id="@+id/btn_xyz_reader"
                style="@style/AppTheme.Button"
                android:onClick="onClick"
                android:text="@string/txt_reader" />

            <Button
                android:id="@+id/btn_my_own_app"
                style="@style/AppTheme.Button"
                android:background="@color/red"
                android:onClick="onClick"
                android:text="@string/txt_my_own_app" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>